feat(auth): JWT bearer auth + security endpoint; protect REST endpoints; Swagger Bearer support

--- a/src/UniversityApp.Api.Rest/appsettings.json
+++ b/src/UniversityApp.Api.Rest/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "Jwt": {
+    "Issuer": "wsei",
+    "Audience": "wsei",
+    "Key": "ThisIsAReallySuperStrongKeyThatHasMoreThan256bits_ChangeMe_0123456789"
+  },
+
   "AllowedHosts": "*"
 }
