UI: lista Students działa z API

--- a/src/UniversityApp.Ui.Admin/appsettings.json
+++ b/src/UniversityApp.Ui.Admin/appsettings.json
@@ -5,8 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
   "WebApi": {
     "BaseUrl": "http://localhost:5169"
-  }
+  },
+  "AllowedHosts": "*"
 }
